# soundome

./: .dockerignore  .envrc  .gitattributes  .gitignore  .gitmodules  .justfile  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  TODO.md  config.example.toml  config.toml  diesel.toml  docker-compose.yml  flake.nix  logs.txt  opencode.jsonc  package.json  pnpm-lock.yaml  rustypipe_cache.json
.cargo/: config.toml
.codegraph/: .gitignore
.github/: FUNDING.yml  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/agents/: README.md  soundome-maintainer.agent.md
.github/instructions/: README.md  ai.instructions.md  database-diesel.instructions.md  domain.instructions.md  downloader.instructions.md  fetcher.instructions.md  organizer.instructions.md  project.instructions.md  rust.instructions.md  server-rocket.instructions.md  tagger-organizer.instructions.md
.github/prompts/: README.md  agent-soundome-maintainer.prompt.md  skill-add-diesel-migration.prompt.md  skill-debug-rocket-route.prompt.md  skill-extend-download-workflow.prompt.md  skill-proxy-http.prompt.md
.github/skills/: README.md
.github/skills/add-diesel-migration/: SKILL.md
.github/skills/debug-rocket-route/: SKILL.md
.github/skills/extend-download-workflow/: SKILL.md
.github/skills/manual-validation-flow/: SKILL.md
.github/skills/proxy-aware-http/: SKILL.md
.github/skills/reference-semantics/: SKILL.md
.github/skills/soundome-change-routing/: SKILL.md
.github/skills/update-soundome-docs/: SKILL.md
.github/workflows/: ci.yaml  docker.yaml  release-cli.yaml
.opencode/agents/: soundome-maintainer.md
.opencode/skills/add-diesel-migration/: SKILL.md
.opencode/skills/debug-rocket-route/: SKILL.md
.opencode/skills/extend-download-workflow/: SKILL.md
.opencode/skills/manual-validation-flow/: SKILL.md
.opencode/skills/proxy-aware-http/: SKILL.md
.opencode/skills/reference-semantics/: SKILL.md
.opencode/skills/soundome-change-routing/: SKILL.md
.opencode/skills/update-soundome-docs/: SKILL.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/src/api/: client.rs  models.rs
apps/cli/src/commands/: ingest.rs  mod.rs  scan.rs
apps/server/: Cargo.toml
apps/server/src/: lib.rs  main.rs
apps/server/src/database/: artist.rs  track.rs
apps/server/src/middlewares/: cors.rs
apps/server/src/models/: album.rs  artist.rs  track.rs
apps/server/src/routes/: albums.rs  artists.rs  audio.rs  download.rs  errors.rs  images.rs  library.rs  metrics.rs  misc.rs  mod.rs  playlists.rs  storage.rs  sync_schedules.rs  tasks.rs  tracks.rs  validations.rs
apps/server/src/utils/: cancellation.rs  database.rs  error.rs  mod.rs  response.rs  task_executor.rs
apps/server/src/utils/macros/: crud_handlers.rs  mod.rs
apps/tests/: Cargo.toml
apps/tests/src/: lib.rs  proxy_rotation.rs  spotify.rs
apps/web/: PWA.md  PWA_ANDROID_DEBUG.md  PWA_QUICK_START.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/web/scripts/: generate-all-icons.mjs  generate-pwa-icons.mjs
apps/web/src/: App.svelte  app.css  main.ts  sw.ts
apps/web/src/components/: PWAUpdatePrompt.svelte
apps/web/src/lib/: HelpModal.svelte  TrackCard.svelte  api.ts  pwa.ts  types.ts
apps/web/src/pages/: Home.svelte  Ingest.svelte  Library.svelte  Storage.svelte  SyncSchedules.svelte  Tasks.svelte  Tools.svelte  Validations.svelte
docs/: README.md  design.md  draft.md  proxy-configuration.md  proxy-usage-example.md  specs.md  web-admin.md  workflow.d2
docs/architecture/: README.md  architecture.d2  design.md  repository-map.md
docs/getting-started/: README.md  configuration.md  development-setup.md  quickstart.md  what-is-soundome.md
docs/guides/: README.md  ai-metadata.md  local-ingest.md  playlists.md  soundcloud.md  spotify.md  validation.md
docs/operations/: README.md  cli.md  invidious-configuration.md  playlist-m3u8-export.md  proxy-configuration.md  proxy-usage-example.md  youtube-search-configuration.md
docs/product/: README.md
docs/specs/: library-filesystem-sync.md  playlist-m3u8-export.md
docs/workflows/: README.md  download.d2  download.md  download.old.d2  download.scenarios.md  web-admin.md  workflow.d2
helpers/scripts/: generate_diagrams_png.sh  install.sh  publish.sh  update_submodules.sh
infra/docker/: Dockerfile.api  Dockerfile.base  Dockerfile.web
tests/: Cargo.toml
tests/src/: domain.rs  file.rs  main.rs  tmp.rs
