[profile.release]
strip = true
lto = true

[workspace]
resolver = "2"
members = [
    "apps/server",
    "packages/shared", "packages/database",
    "packages/downloader",
    "packages/fetcher", "packages/domain",
    "packages/tagger", "apps/cli",
    "packages/config", "tests", "packages/ai", "packages/organizer"]
