[profile.release]
strip = true
lto = true

[workspace]
resolver = "2"
members = [
    "apps/server",
    "packages/shared", "packages/database",
    "packages/downloader",
    "packages/fetcher", "packages/domain",
    "packages/tagger", "apps/cli",
    "packages/config", "tests", "packages/ai", "packages/organizer"]

[workspace.dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }