[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../packages/shared" }
config = { path = "../packages/config" }
orchestrator = { path = "../packages/orchestrator" }
tagger = { path = "../packages/tagger" }
fetcher = { path = "../packages/fetcher" }
downloader = { path = "../packages/downloader" }
database = { path = "../packages/database" }
ai = { path = "../packages/ai" }

tokio = { version = "1.43.0", features = ["full"] }
dotenvy = { git = "https://github.com/allan2/dotenvy", features = ["macros"] }

# TODO: Remove (tmp)
rsoundcloud = "0.2.3"
# rsoundcloud = { path = "../../rsoundcloud" } # for local testing purposes
fancy-regex = "0.14.0"
openrouter_api = { path = "../../openrouter_api" }
openrouter = "0.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
schemars = "0.8.22"