[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../../packages/shared" }
config = { path = "../../packages/config" }
domain = { path = "../../packages/domain" }
database = { path = "../../packages/database" }

tracing-subscriber = { workspace = true }

tokio = { version = "1.44.2", features = ["full"] }
dotenvy = { git = "https://github.com/allan2/dotenvy", features = ["macros"] }
clap = { version = "4", features = ["derive"] }

