[package]
name = "soundome-server"
description = "Soundome server"
version = "1.0.0"
edition = "2021"
authors = [
    "Bartholomé Gili <dev.bartho@gmail.com",
]
repository = "https://github.com/barthofu/soundome"
readme = "README.md"
keywords = [
    "soundome",
    "music",
    "server",
    "api"
]

[dependencies]
domain = { path = "../../packages/domain" }
shared = { path = "../../packages/shared" }
config = { path = "../../packages/config" }
database = { path = "../../packages/database" }
tagger = { path = "../../packages/tagger" }
walkdir = "2"

tracing-subscriber = { workspace = true }
tracing = { workspace = true }

rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
diesel = { version = "2.2.7", features = ["sqlite", "r2d2"] }
libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
okapi = { version = "0.7.0" }
schemars = "0.8.21"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.44.2", features = ["full"] }
dotenvy = { git = "https://github.com/allan2/dotenvy", features = ["macros"] }
